# imgui_window_test

./: .gitignore  CMakeLists.txt  CMakePresets.json  readme.md
Example/: CMakeLists.txt
Example/src/: main.cpp
Lib/: CMakeLists.txt
Lib/src/: CallbackVoid.h~RF69c7ac7.TMP  Callbacks.h  Data.h  ImGuiWindow.cpp  ImGuiWindow.h
Lib/src/windowApis/: BaseWindow.h  LinuxWindowApi.cpp  LinuxWindowApi.h  Win32Api.cpp  Win32Api.h  mac.cpp  mac.h
